--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 HELP.md
 .gradle
 build/
+/var/log
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+*.log
 
 ### STS ###
 .apt_generated
