--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,6 +8,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=booking_db
+  redis:
+    image: redis:7.0.12
+    ports:
+      - "6379:6379"
   mongodb:
     image: mongo:6.0.8
     ports:
